# surgishop_workspaces

./: .gitignore  README.md  apps.txt  license.txt  pyproject.toml
surgishop_workspaces/: hooks.py  modules.txt
surgishop_workspaces/fixtures/: custom_field.json
surgishop_workspaces/public/js/: custom-barcode-scanner.js  custom-serial-batch-selector.js  gs1-utils.js
surgishop_workspaces/workspace/sales_manager/: sales_manager.json
