[project]
name = "surgishop_workspaces"
version = "0.0.1"
description = "Custom workspaces for SurgiShop ERPNext"
authors = [
    { name = "Gary", email = "gary@surgishop.com" }
]
dependencies = [
    "frappe>=15",
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6"
]
readme = "README.md"
license = { text = "MIT" }

[tool.uv]
override-dependencies = [
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
frappe-app = true

[project.entry-points."frappe"]
surgishop_workspaces = "surgishop_workspaces"
