[project]
name = "surgishop_workspaces"
version = "0.0.1"
description = "Custom workspaces for SurgiShop ERPNext"
authors = [
    { name = "SurgiShop", email = "gary@surgishop.com" }
]
dependencies = [
    "frappe"
]
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
frappe-app = true

[project.entry-points."frappe"]
surgishop_workspaces = "surgishop_workspaces"

[tool.bench.frappe-dependencies]
frappe = ">=15"
erpnext = ">=15"
